# pyrs

./: CMakeLists.txt  _pyrs.c  _pyrs.cpp  pyrs.c  pyrs.py  setup.py
cpyrs/: _pyrs.cpp  context.h  device.h  exception.h  pyrs.cpp
